--- a/main.html
+++ b/main.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Rides - Evolution Cycling</title>
+<title>Evolution - Home page</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="styles.css">
 <style>
-  body {
-    padding-top: 70px; /* Adjust this value based on the height of your navbar */
-    background: linear-gradient(to bottom, #f9f9f9, #fff);
+body {
+    background-image: url('brad-knight-huWlb1NP67w-unsplash.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 header {
-    display: none;
+    height: 800px;
 }
 </style>
 </head>
-<body>
 
+
+
+<body>
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
@@ -31,29 +34,17 @@ header {
   </div>
 </div>
 
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+  <div class="w3-display-middle w3-margin-top w3-center">
+    <h1 class="w3-xxlarge" style="color: black;"><span class="w3-padding w3-opacity-min"><b>Evolution </b></span></h1>
+  </div>
+</header>
 
-<!-- Page Content -->
-<main>
-    <h1><b>Saturday Ride</b></h2>
-    <p>Information about the rides goes here.</p>
-    <!-- Add more content as needed -->
-</main>
+<!-- End page content -->
+</div>
 
-<main>
-  <h1><b>Sunday Ride</b></h1>
-  <p>Rotating route. </p>
-  <p>No drop ride.</p>
-  <p>Start time of 7:15 in the summer. 8:00 am in the winter.</p>
-  <p>Check out the routes page for common routes!</p>
 
-  <!-- Add more content as needed -->
-</main>
-
-<main>
-  <h1><b>Weekday Rides</b></h1>
-  <p>Information about the rides goes here.</p>
-  <!-- Add more content as needed -->
-</main>
 
 </body>
 </html>
