--- a/routes.html
+++ b/routes.html
@@ -18,18 +18,8 @@
 <body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-    <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-      <a href="index.html" class="w3-bar-item w3-button"><b> Evolution </b> </a>
-      <!-- Float links to the right. Hide them on small screens -->
-      <div class="w3-right w3-hide-small">
-        <a href="rides.html" class="w3-bar-item w3-button">Rides</a>
-        <a href="routes.html" class="w3-bar-item w3-button">Routes</a>
-        <a href="#roster" class="w3-bar-item w3-button">Roster</a>
-        <a href="#sponsors" class="w3-bar-item w3-button">Sponsors</a>
-      </div>
-    </div>
-  </div>
+<div id="navbar"></div>
+
 
 
 
