--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@ header {
   </div>
 </header>
 
+<!-- Add this code after your existing code -->
+<section id="who-we-are">
+  <h2>Who we are</h2>
+  We are a Chicago-based cycling team with a committed crew of racers and non-racers alike. We welcome newcomers to join us on our weekly Sunday team ride along the north shore or one of the "exploration" rides on Saturdays. Check out the rides page for more details.
+</section>
+
 <!-- End page content -->
 </div>
 
