--- a/rides.html
+++ b/rides.html
@@ -35,7 +35,9 @@ header {
 <!-- Page Content -->
 <main>
     <h1><b>Saturday Ride</b></h2>
-    <p>Information about the rides goes here.</p>
+    <h3><b> Start time:</b></h3> <p> 8:00 AM </p>
+    <h3><b> Start location: </b></h3> <p> XX </p>
+
     <!-- Add more content as needed -->
 </main>
 
