--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
     background-repeat: no-repeat;
 }
 header {
-    height: 800px;
+    height: 300px;
 }
 </style>
 </head>
@@ -42,9 +42,14 @@ header {
 </header>
 
 <!-- Add this code after your existing code -->
+<div class="center">
+  <section id="who-we-are">
+    <h2>Who We Are</h2>
+    We are a Chicago-based cycling team with a committed crew of racers and non-racers alike. We welcome newcomers to join us. Check out the rides page for more details! </section>
+</div>
 <section id="who-we-are">
-  <h2>Who we are</h2>
-  We are a Chicago-based cycling team with a committed crew of racers and non-racers alike. We welcome newcomers to join us on our weekly Sunday team ride along the north shore or one of the "exploration" rides on Saturdays. Check out the rides page for more details.
+  <h2>Who We Are</h2>
+
 </section>
 
 <!-- End page content -->
