--- a/rides.html
+++ b/rides.html
@@ -35,25 +35,28 @@ header {
 <!-- Page Content -->
 <main>
     <h1><b>Saturday Ride</b></h2>
-    <h3><b> Start time:</b></h3> <p> 8:00 AM </p>
-    <h3><b> Start location: </b></h3> <p> XX </p>
-
+    <p> <b> Start time:</b> 8:00 AM </p>
+    <p> <b> Start location:</b> XX </p>
+    <p> <b> Distance:</b> 50-70 miles </p>
+    <p> <b> Pace: Varied (17-19 mph average) </b></p>
+    <p> <b> Route:</b> Rotating route. Check discord for weekly route. </p>
     <!-- Add more content as needed -->
 </main>
 
 <main>
   <h1><b>Sunday Ride</b></h1>
-  <p>Rotating route. </p>
-  <p>No drop ride.</p>
-  <p>Start time of 7:15 in the summer. 8:00 am in the winter.</p>
-  <p>Check out the routes page for common routes!</p>
+  <p> <b> Start time:</b> 8:00 AM </p>
+  <p> <b> Start location:</b> XX </p>
+  <p> <b> Distance:</b> 50-70 miles </p>
+  <p> <b> Pace: Varied (17-19 mph average) </b></p>
+  <p> <b> Route:</b> Rotating route. Check discord for weekly route. </p>
 
   <!-- Add more content as needed -->
 </main>
 
 <main>
   <h1><b>Weekday Rides</b></h1>
-  <p>Information about the rides goes here.</p>
+  <p> Weekday rides are on a winter hiatus. We'll pick up our regular weekday rides in the spring.</p>
   <!-- Add more content as needed -->
 </main>
 
