--- a/index.html
+++ b/index.html
@@ -44,13 +44,9 @@ header {
 <!-- Add this code after your existing code -->
 <div class="center">
   <section id="who-we-are">
-    <h2>Who We Are</h2>
-    We are a Chicago-based cycling team with a committed crew of racers and non-racers alike. We welcome newcomers to join us. Check out the rides page for more details! </section>
+    <h2 class="center-text">Who We Are</h2>
+        <p class="center-text">We are a Chicago-based cycling team with a committed crew of racers and non-racers alike. We welcome newcomers to join us on one of our weekly rides. Check out the rides page for more details!  </p></section>
 </div>
-<section id="who-we-are">
-  <h2>Who We Are</h2>
-
-</section>
 
 <!-- End page content -->
 </div>
