--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@ header {
 <!-- Add this code after your existing code -->
 <div class="center">
   <section id="who-we-are">
-    <h2 class="center-text">Who We Are</h2>
-        <p class="center-text">We are a Chicago-based cycling team with a committed crew of racers and non-racers alike. We welcome newcomers to join us on one of our weekly rides. Check out the rides page for more details!  </p></section>
+        <p class="center-text">We are a Chicago-based cycling team with a committed crew of racers and non-racers alike. We welcome newcomers to join us on one of our weekly rides. </p><p class = "center-text">Check out the rides page for more details!  </p></section>
 </div>
 
 <!-- End page content -->
