--- a/routes.html
+++ b/routes.html
@@ -39,7 +39,7 @@
     <div class="route-container">
         <div class="route-description">
             <h3>Evolution Sunday Winter Route</h3>
-            <p> On Sundays, we do our variation on the classic northern shore cycling route. The winter version skips the sprints along Green Bay road, opting to take Sheridan Road back to the city.</p>
+            <p> On Sundays, we do our variation on the classic northern shore cycling route. The winter version skips the sprints along Green Bay road, opting to take Sheridan  back to the city.</p>
         </div>
         <div class="strava-embed">
             <div style="transform: scale(0.8); transform-origin: 0 0;">
@@ -52,7 +52,6 @@
     <div class="route-container">
         <div class="route-description">
             <h3>Inverness</h3>
-            <p>Description of the route...</p>
         </div>
         <div class="strava-embed">
             <div style="transform: scale(0.8); transform-origin: 0 0;">
@@ -64,7 +63,7 @@
     <div class="route-container">
         <div class="route-description">
             <h3>Extended Hinsdale Route</h3>
-            <p>There are a few different routes we take to Hinsdale, this is the ``extended'' one.</p>
+            <p>There are a few different routes we take to Hinsdale. This is the longer,  "extended" route.</p>
         </div>
         <div class="strava-embed">
             <div style="transform: scale(0.8); transform-origin: 0 0;">
@@ -72,20 +71,6 @@
             </div>
         </div>
     </div>
-
-    <h1><b>Specialty Routes</b> </h2>
-    <div class="route-container">
-        <div class="route-description">
-            <h3>Taco Ride 2023</h3>
-            <p>Occasionally, we go on exploration rides. This one hits 2 taco shops XX XX</p>
-        </div>
-        <div class="strava-embed">
-            <div style="transform: scale(0.8); transform-origin: 0 0;">
-                <div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3167613659786564022" data-full-width="false" data-hide-elevation="true" data-style="standard"></div><script src="https://strava-embeds.com/embed.js"></script>
-            </div>
-        </div>
-    </div>
-    <!-- Add more content as needed -->
 </main>
 
 
