--- a/routes.html
+++ b/routes.html
@@ -51,6 +51,17 @@
 <h1><b>Saturday Routes</b> </h2>
     <div class="route-container">
         <div class="route-description">
+            <h3>Arlington Heights</h3>
+        </div>
+        <div class="strava-embed">
+            <div style="transform: scale(0.8); transform-origin: 0 0;">
+                <div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3106686370004613828" data-full-width="false" data-hide-elevation="true" data-style="standard"></div><script src="https://strava-embeds.com/embed.js"></script>
+            </div>
+        </div>
+    </div>
+
+    <div class="route-container">
+        <div class="route-description">
             <h3>Inverness</h3>
         </div>
         <div class="strava-embed">
@@ -59,7 +70,7 @@
             </div>
         </div>
     </div>
-
+    
     <div class="route-container">
         <div class="route-description">
             <h3>Extended Hinsdale Route</h3>
