--- a/rides.html
+++ b/rides.html
@@ -36,9 +36,9 @@ header {
 <main>
     <h1><b>Saturday Ride</b></h2>
     <p> <b> Start time:</b> 8:00 AM </p>
-    <p> <b> Start location:</b> XX </p>
+    <p> <b> Start location:</b> Walgreens Parking Lot in Andersonville. 5440 N Clark St, Chicago, IL 60640 </p>
     <p> <b> Distance:</b> 50-70 miles </p>
-    <p> <b> Pace: Varied (17-19 mph average) </b></p>
+    <p> <b> Pace:</b> Varied (17-19 mph average). No drop. </p>
     <p> <b> Route:</b> Rotating route. Check discord for weekly route. </p>
     <!-- Add more content as needed -->
 </main>
@@ -46,10 +46,10 @@ header {
 <main>
   <h1><b>Sunday Ride</b></h1>
   <p> <b> Start time:</b> 8:00 AM </p>
-  <p> <b> Start location:</b> XX </p>
+  <p> <b> Start location:</b> Walgreens Parking Lot in Andersonville. 5440 N Clark St, Chicago, IL 60640 </p>
   <p> <b> Distance:</b> 50-70 miles </p>
-  <p> <b> Pace: Varied (17-19 mph average) </b></p>
-  <p> <b> Route:</b> Rotating route. Check discord for weekly route. </p>
+  <p> <b> Pace:</b> Varied (17-19 mph average). No drop. </p>
+  <p> <b> Route:</b> North shore route. See routes page for seasonal route. </p>
 
   <!-- Add more content as needed -->
 </main>
