--- a/rides.html
+++ b/rides.html
@@ -47,7 +47,7 @@ header {
   <h1><b>Sunday Ride</b></h1>
   <p> <b> Start time:</b> 8:00 AM </p>
   <p> <b> Start location:</b> Walgreens Parking Lot in Andersonville. 5440 N Clark St, Chicago, IL 60640 </p>
-  <p> <b> Distance:</b> 50-70 miles </p>
+  <p> <b> Distance:</b> 45 miles </p>
   <p> <b> Pace:</b> Varied (17-19 mph average). No drop. </p>
   <p> <b> Route:</b> North shore route. See routes page for seasonal route. </p>
 
