--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ header {
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
     <a href="index.html" class="w3-bar-item w3-button"><b> Evolution </b> </a>
+    <span class="navbar-toggler">&#9776;</span>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="rides.html" class="w3-bar-item w3-button">Rides</a>
@@ -33,6 +34,7 @@ header {
     </div>
   </div>
 </div>
+
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
