--- a/main.html
+++ b/main.html
@@ -24,6 +24,7 @@ header {
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
     <a href="index.html" class="w3-bar-item w3-button"><b> Evolution </b> </a>
+    <span class="navbar-toggler">&#9776;</span>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="rides.html" class="w3-bar-item w3-button">Rides</a>
@@ -45,6 +46,17 @@ header {
 </div>
 
 
-
-</body>
+<script>
+  document.querySelector('.navbar-toggler').addEventListener('click', function() {
+    var links = document.querySelectorAll('.w3-bar-item');
+    for (var i = 0; i < links.length; i++) {
+      if (links[i].style.display === 'block') {
+        links[i].style.display = 'none';
+      } else {
+        links[i].style.display = 'block';
+      }
+    }
+  });
+  </script>
+  </body>
 </html>
