--- a/index.html
+++ b/index.html
@@ -54,5 +54,17 @@ header {
 
 
 
-</body>
-</html>
+<script>
+  document.querySelector('.navbar-toggler').addEventListener('click', function() {
+    var links = document.querySelectorAll('.w3-bar-item');
+    for (var i = 0; i < links.length; i++) {
+      if (links[i].style.display === 'block') {
+        links[i].style.display = 'none';
+      } else {
+        links[i].style.display = 'block';
+      }
+    }
+  });
+  </script>
+  </body>
+  </html>
