--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@ header {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="index.html" class="w3-bar-item w3-button"><b> Evolution </b> </a>
-    <span class="navbar-toggler">&#9776;</span>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
+    <a href="index.html" class="w3-bar-item w3-button"><b>Evolution</b></a>
+    <div class="navbar-links w3-right w3-hide-small">
       <a href="rides.html" class="w3-bar-item w3-button">Rides</a>
       <a href="routes.html" class="w3-bar-item w3-button">Routes</a>
       <a href="#roster" class="w3-bar-item w3-button">Roster</a>
       <a href="#sponsors" class="w3-bar-item w3-button">Sponsors</a>
     </div>
+    <span class="navbar-toggler">☰</span>
   </div>
 </div>
 
@@ -56,7 +55,7 @@ header {
 
 <script>
   document.querySelector('.navbar-toggler').addEventListener('click', function() {
-    var links = document.querySelectorAll('.w3-bar-item');
+    var links = document.querySelectorAll('.navbar-links .w3-bar-item');
     for (var i = 0; i < links.length; i++) {
       if (links[i].style.display === 'block') {
         links[i].style.display = 'none';
