--- a/routes.html
+++ b/routes.html
@@ -84,6 +84,7 @@
     </div>
 </main>
 
+Looking for other rides around the city? <a href="https://chicagogrouprides.com">Here is </a> for a comprehensive list of rides in the Chicago area maintained by Half Acre Cycling.
 
 </body>
 </html>
