--- a/routes.html
+++ b/routes.html
@@ -102,6 +102,17 @@
                             </div>
                         </div>
                     </div>
+
+                  <div class="route-container">
+                        <div class="route-description">
+                            <h3>Riverwoods</h3>
+                        </div>
+                        <div class="strava-embed">
+                            <div style="transform: scale(0.8); transform-origin: 0 0;">
+                                <div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3173285077765763590" data-full-width="false" data-hide-elevation="true" data-style="standard"></div><script src="https://strava-embeds.com/embed.js"></script>
+                            </div>
+                        </div>
+                    </div>
                 </main>
     <!-- Existing scripts and additional page content here... -->
 </body>
